--- a/app.css
+++ b/app.css
@@ -20,8 +20,9 @@ button {
 }
 
 .box {
-  width: 20rem;
-  height: 20rem;
+  width: fit-content;
+  height: fit-content;
+  padding: 2rem;
   margin: 12px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
   border-radius: 0.3rem;
