--- a/app.css
+++ b/app.css
@@ -20,8 +20,8 @@ button {
 }
 
 .box {
-  width: fit-content;
-  height: fit-content;
+  width: 30rem;
+  height: 20rem;
   padding: 2rem;
   margin: 12px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
